Avoid requesting the Drive mount path if Drive is disabled.

Guest mode profiles do not have a valid account ID key so requesting
their DriveFS path is invalid. Such accounts never have Drive enabled
and the downloads path should not be within Drive if disabled.

Update DriveIntegrationService to avoid paths within Drive when
disabling Drive with DriveFS enabled so the above assumption is valid
with DriveFS enabled.

Bug: 904558
Change-Id: Ic8b64609f3657feae4b1f289e3726a51a871b36c
Reviewed-on: https://chromium-review.googlesource.com/c/1333091
Reviewed-by: Sergei Datsenko <dats@chromium.org>
Commit-Queue: Sam McNally <sammc@chromium.org>
Cr-Commit-Position: refs/heads/master@{#607501}
Former-commit-id: 2e2e140716353c164101a166eb0e5100e88eb5a2